--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
-    "canvas": "^2.7.0",
+    "canvas": "^2.8.0",
     "chart.js": "^2.9.4",
     "cookie-parser": "^1.4.5",
     "csv-parser": "^3.0.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
